# udx-fastpath

./: .clang-format  .gitignore  CMakeLists.txt  UDX_APP  arp.pcap  build.sh  compile_commands.json  make.sh  ping.pcap
UPFCP/: 5gc_config.json  system_config.json  upf_config.json
app/: CMakeLists.txt  main.cpp  upf_gtp.cpp
app/include/: gtp_header.h  upf_gtp.h
cmake/: Findcndp.cmake  Finddpdk.cmake  Finddpdk_pmd.cmake
include/config/: cndp_config_tags.h  common_config_tags.h  config_tags.h  dpdk_config_tags.h
include/core/: core.h
include/core/cndp/: cndp.h
include/core/dpdk/: dpdk.h
include/core/tap/: tap.h
include/unet/: unet.h
include/unet/common/: common.h
include/utility/log/: log.h
include/utility/shm/: shm.h
k8s/: Dockerfile  DockerfileNew  pod.yaml  pod_cndp.yaml  pod_dpdk.yaml  tap-network.yaml
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt  core.cpp
lib/core/cndp/: CMakeLists.txt  cndp.cpp  config.cpp  stats.cpp
lib/core/dpdk/: CMakeLists.txt  config.c  dpdk.cpp  parameters.c  testpmd.h  util.c
lib/core/tap/: CMakeLists.txt  tap.cpp
lib/unet/: CMakeLists.txt
lib/unet/common/: CMakeLists.txt  common.cpp
lib/utility/: CMakeLists.txt
lib/utility/log/: CMakeLists.txt  log.cpp
src/: CMakeLists.txt  main.cpp
testing/: a.out  delete_taps.sh  read_mac.cpp  template.cpp
udx-configs/: application-config.jsonc  datapath-config-template.jsonc  datapath-config.jsonc
